# mikimo

./: .gitignore  README.md  kinetic_solver.py  kinetic_solver_v3.py  kinetic_solver_v4.py  km_volcanic.py  plot2d_mod.py  pyproject.toml  replot.py  requirement.txt  requirements.txt  setup.py  spectre_3.ipynb  spectre_4.ipynb
.github/workflows/: github-pytest.yml
archive/: kinetic_solver.py  kinetic_solver_saved.py  kinetic_solver_v2.py  kinetic_solver_v2_s.py  kinetic_solver_v2_saved.py  kinetic_solver_v2_ss.py  save.py  spectre.ipynb  spectre_2.ipynb  test.ipynb
archive/model/: kinetic_solver_v2.py
archive/test_HDF/: Pp_HDF.txt  Ps.txt  Rp_HDF.txt  Rs.txt  c0_HDF.txt  cat.txt  kinetic_solver.py  reaction_data.csv
archive/test_v1/: Ps.txt  Rp_2 (2).txt  Rs.txt  c0_2.txt  cat.txt  reaction_data.csv  reaction_data_test_2.csv
examples/: compute_k.py  e2k.py  e2k.sh  example.ipynb
examples/data/: data.h5  data_a_tt.h5  test_input.csv
model/: kinetic_solver_v1.py  kinetic_solver_v2.py  kinetic_solver_v22.py  kinetic_solver_v23.py  kinetic_solver_v23_s.py
navicat_mikimo/: __main__.py  helper.py  kinetic_solver.py  kinetic_solver.pyx  kinetic_solver_runner.py  km_k_volcanic.py  km_volcanic.py  plot_function.py  replot.py  screen_reaction_condition.py  test_module.py
spectre/: __main__.py  helper.py  kinetic_solver.py  km_k_volcanic.py  km_volcanic.py  plot2d_mod.py  plot_function.py  replot.py  screen_reaction_condition.py
test_cases/1/: reaction_data.csv
test_cases/2D/: rxn_network.csv
test_cases/5_suzuki/: reaction_data.xlsx
test_cases/6_suzuki/: kinetic_data.csv
tmp/: kinetic_solver_v3.py  km_volcanic.py  spectre_3.ipynb
(+248 files in other folders)
