[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navicat_mikimo"
version = "0.0.0"
authors = [
  { name = "pregabalin_Hoshiyomi", email = "thanapat.worakul@epfl.ch" },
]
description = "microkinetic modeling code for homogeneous catalytic reactions"
keywords = ["computational chemistry utility"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.1",
    "scipy>=1.10.0",
    "autograd>=1.5",
    "matplotlib>=3.6.3",
    "pandas>=1.5.3",
    "h5py>=3.8.0",
    "fire>=0.5.0",
    "setuptools>=67.1.0",
    "navicat-volcanic>=1.2.12",
    "openpyxl>=3.1.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
navicat_mikimo = "spectre.__main__:main"
